FEAT: bottom_nav 색상 조정, BottomSheetAccountDialogFragment 추가
1. bottom_nav in activity_main.xml 색상을 배경색과 동일하게 조정

2. 각 fragment에 동일한 notice 표시를 위해 view_notices.xml 분리

3. BottomSheetAccountDialogFragment 추가
  NavigationView 내 계정변경 버튼에 의한 Dialog
  view_account.xml 생성

--- a/app/src/main/res/layout/sidepanel_header.xml
+++ b/app/src/main/res/layout/sidepanel_header.xml
@@ -26,7 +26,7 @@
         tools:text="@string/logout" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/change_account"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
