--- a/app/src/main/res/menu/activity_home_navigation_drawer.xml
+++ b/app/src/main/res/menu/activity_home_navigation_drawer.xml
@@ -2,10 +2,17 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/drawer_login"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:title="@string/login" />
+    <item
+        android:id="@+id/drawer_mypage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:title="@string/my_page" />
     <item
+        android:id="@+id/drawer_setting"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:title="@string/setting" />
