--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -1,11 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
     app:startDestination="@+id/nav_home">
 
     <include app:graph="@navigation/diet"/>
     <include app:graph="@navigation/dept"/>
     <include app:graph="@navigation/home"/>
+    <activity
+        android:id="@+id/drawer_login"
+        android:name="com.dearmyhealth.activities.LoginActivity"
+        android:label="@string/app_name"
+        tools:layout="@layout/activity_login">
+    </activity>
 
 </navigation>
