--- a/app/src/main/res/navigation/diet.xml
+++ b/app/src/main/res/navigation/diet.xml
@@ -8,7 +8,7 @@
 
     <fragment
         android:id="@+id/dietScreen"
-        android:name="com.dearmyhealth.activities.DietFragment"
+        android:name="com.dearmyhealth.modules.Diet.ui.DietFragment"
         android:label="@string/app_name"
         tools:layout="@layout/fragment_diet">
         <!--<action app:destination="@id/dietReportScreen"/>-->
