--- a/app/src/main/res/navigation/home.xml
+++ b/app/src/main/res/navigation/home.xml
@@ -8,7 +8,7 @@
 
     <fragment
         android:id="@+id/homeScreen"
-        android:name="com.dearmyhealth.activities.HomeFragment"
+        android:name="com.dearmyhealth.home.HomeFragment"
         android:label="@string/app_name"
         tools:layout="@layout/fragment_home">
     </fragment>
