FEAT: 당일 영양소 섭취 그래프 구현 (MPAndroidChart 라이브러리 추가)
1. 하나의 영양소에 TodayNutritionItemView를 사용해 표시.
이름, 수치, 그래프가 담긴 View이다.
그래프는 MPAndroidChart 라이브러리를 사용하였고, HorizontalBarChart를 삽입.

2. shape_radius_square_stroke.xml의 배경색을 하얀색으로 변경.

--- a/app/src/main/res/layout/view_today_nutrition_item.xml
+++ b/app/src/main/res/layout/view_today_nutrition_item.xml
@@ -8,14 +8,15 @@
             type="String" />
         <variable
             name="value"
-            type="int" />
+            type="float" />
         <variable
             name="suggested"
             type="int" />
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginVertical="16dp">
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/nut_item_guide"
@@ -39,19 +40,19 @@
             android:layout_height="match_parent"
             android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/nut_item_name_TV">
+            app:layout_constraintStart_toStartOf="parent">
 
             <TextView
                 android:id="@+id/nut_item_value_TV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@{value}" />
+                android:text="@{String.valueOf(value)}" />
 
             <TextView
                 android:id="@+id/nut_item_suggested_TV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@{String.valueOf(suggested)+'g'}" />
+                android:text="@{'/'+String.valueOf(suggested)+'g'}" />
         </LinearLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -60,7 +61,8 @@
             android:background="@drawable/shape_radius_square_stroke"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/nut_item_values_LL">
+            app:layout_constraintTop_toBottomOf="@id/nut_item_values_LL"
+            android:clipChildren="true">
 
             <com.github.mikephil.charting.charts.HorizontalBarChart
                 android:id="@+id/barChart"
