FEAT: 오늘 식단 상세 페이지 레이아웃 구현
1. DietDetailFragment와 내부 탭 DietTodayFragment, DietStatsFragment 생성
   DietDetailfragment에서 TabLayout을 사용해
   DietTodayFragment와 DietStatsFragment를 보여주도록 구성.

   Fragment 속의 Fragment이므로 childFragmentManager를 사용해 내부 화면을 전환함.

2. fragment_diet.xml 에서 today_diet_CL에 클릭 리스너 설정.
   today_diet_CL에 (오늘 식단 구역)을 터치시
   navConroller를 호출해 navigate 하도록 한다.

3. Navigation(diet.xml)에 새로운 Fragment (DietDetailFragment) 등록.
   DietFragment에서 DietDetailFragment로 이동하는 action 추가.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,8 @@
 
     <color name="second_panel">#FFDAD7CD</color>
     <color name="primary">#FF344E41</color>
+
+    <color name="green_1">#FF3A5A40</color>
+    <color name="green_2">#FF588157</color>
+    <color name="green_3">#FFA3B18A</color>
 </resources>
