--- a/app/src/main/res/layout/fragment_diet.xml
+++ b/app/src/main/res/layout/fragment_diet.xml
@@ -58,6 +58,7 @@
                 app:layout_constraintGuide_percent="0.8" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/today_diet_CL"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_marginStart="22dp"
