--- a/app/src/main/res/navigation/diet.xml
+++ b/app/src/main/res/navigation/diet.xml
@@ -12,7 +12,15 @@
         android:label="@string/app_name"
         tools:layout="@layout/fragment_diet">
         <!--<action app:destination="@id/dietReportScreen"/>-->
+        <action
+            android:id="@+id/action_dietScreen_to_dietDetailScreen"
+            app:destination="@id/dietDetailScreen" />
     </fragment>
+    <fragment
+        android:id="@+id/dietDetailScreen"
+        android:name="com.dearmyhealth.modules.Diet.ui.DietDetailFragment"
+        tools:layout="@layout/fragment_diet_detail"/>
+
     <fragment
         android:id="@+id/dietReportScreen"
         android:label="@string/app_name">
