FEAT: DietTodayFragment_skeleton UI 생성
issue: chipGroup, chip 컴포넌트의 사용 조건이 Material 테마를 사용하는 것.
현재 AppCompat 테마를 사용중이어서 해당 fragment에 진입시 crash가 발생함.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,6 +39,7 @@
             app:itemBackground="?android:attr/colorBackground"
             app:itemTextColor="?android:attr/textColorPrimary"
             app:itemIconTint="?android:attr/textColorPrimary"
+            app:labelVisibilityMode="unlabeled"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:menu="@menu/menu_bottom_nav" />
