--- a/app/src/main/res/layout/view_diet_detail_item.xml
+++ b/app/src/main/res/layout/view_diet_detail_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
         <variable
             name="image"
@@ -15,22 +16,24 @@
             type="String" />
 
     </data>
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <ImageView
             android:id="@+id/diet_image_IV"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginBottom="16dp"
+            android:scaleType="centerCrop"
             android:src="@{image}"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintDimensionRatio="h,1:1"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/bottom_diet_unclick" />
 
         <LinearLayout
             android:id="@+id/diet_details"
@@ -48,7 +51,9 @@
                 android:id="@+id/diet_name_TV"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="아침" />
+                android:text="아침"
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/diet_time_TV"
@@ -56,16 +61,58 @@
                 android:layout_height="wrap_content"
                 android:text="오전 07:00" />
 
-            <androidx.constraintlayout.helper.widget.Flow
-                android:id="@+id/nutrients_flow"
+            <com.google.android.material.chip.ChipGroup
+                android:id="@+id/chipGroup"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                app:chipSpacingVertical="8dp">
+
+                <com.google.android.material.chip.Chip
+                    android:id="@+id/chip"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/shape_radius_square_stroke_r16dp"
+                    android:backgroundTint="@color/second_panel"
+                    android:checkable="false"
+                    android:clickable="false"
+                    android:focusable="false"
+                    android:padding="10dp"
+                    android:text="칼로리: 0kcal"
+                    app:checkedIconEnabled="false"
+                    app:checkedIconVisible="false"
+                    app:chipBackgroundColor="@color/second_panel"
+                    app:chipIconEnabled="false"
+                    app:chipIconVisible="false"
+                    app:closeIconEnabled="false"
+                    app:closeIconVisible="false"
+                    app:ensureMinTouchTargetSize="true" />
+
+                <com.google.android.material.chip.Chip
+                    android:id="@+id/chip2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/shape_radius_square_stroke_r16dp"
+                    android:backgroundTint="@color/second_panel"
+                    android:checkable="false"
+                    android:clickable="false"
+                    android:focusable="false"
+                    android:padding="10dp"
+                    android:text="칼로리: 0kcal"
+                    app:checkedIconEnabled="false"
+                    app:checkedIconVisible="false"
+                    app:chipBackgroundColor="@color/second_panel"
+                    app:chipIconEnabled="false"
+                    app:chipIconVisible="false"
+                    app:closeIconEnabled="false"
+                    app:closeIconVisible="false"
+                    app:ensureMinTouchTargetSize="true" />
+            </com.google.android.material.chip.ChipGroup>
 
             <TextView
                 android:id="@+id/diet_food_TV"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="" />
+                android:text="@string/default_diet_description" />
 
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
