--- a/app/src/main/res/layout/view_diet_detail_item.xml
+++ b/app/src/main/res/layout/view_diet_detail_item.xml
@@ -51,7 +51,7 @@
                 android:id="@+id/diet_name_TV"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="아침"
+                android:text="@string/breakfast"
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
@@ -72,7 +72,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@drawable/shape_radius_square_stroke_r16dp"
-                    android:backgroundTint="@color/second_panel"
+                    android:backgroundTint="@color/secondary"
                     android:checkable="false"
                     android:clickable="false"
                     android:focusable="false"
@@ -80,7 +80,7 @@
                     android:text="칼로리: 0kcal"
                     app:checkedIconEnabled="false"
                     app:checkedIconVisible="false"
-                    app:chipBackgroundColor="@color/second_panel"
+                    app:chipBackgroundColor="@color/secondary"
                     app:chipIconEnabled="false"
                     app:chipIconVisible="false"
                     app:closeIconEnabled="false"
@@ -92,7 +92,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@drawable/shape_radius_square_stroke_r16dp"
-                    android:backgroundTint="@color/second_panel"
+                    android:backgroundTint="@color/secondary"
                     android:checkable="false"
                     android:clickable="false"
                     android:focusable="false"
@@ -100,7 +100,7 @@
                     android:text="칼로리: 0kcal"
                     app:checkedIconEnabled="false"
                     app:checkedIconVisible="false"
-                    app:chipBackgroundColor="@color/second_panel"
+                    app:chipBackgroundColor="@color/secondary"
                     app:chipIconEnabled="false"
                     app:chipIconVisible="false"
                     app:closeIconEnabled="false"
