--- a/app/src/main/res/layout/fragment_diet.xml
+++ b/app/src/main/res/layout/fragment_diet.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".modules.Diet.ui.DietFragment">
@@ -43,7 +43,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginTop="10dp"
-            android:background="@color/second_panel"
+            android:background="@color/secondary"
             app:layout_constraintBottom_toBottomOf="@id/guideline_diet_3"
             app:layout_constraintEnd_toEndOf="@id/guideline_diet_2"
             app:layout_constraintStart_toStartOf="@id/guideline_diet_1"
@@ -76,7 +76,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
                     android:layout_marginTop="10dp"
-                    android:text="오늘 식단"
+                    android:text="@string/a_today_diet"
                     android:textSize="20sp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -87,6 +87,7 @@
                     android:layout_height="25dp"
                     android:layout_marginStart="3dp"
                     android:background="@drawable/shape_circle_stroke"
+                    android:focusableInTouchMode="false"
                     android:src="@android:drawable/ic_menu_help"
                     app:layout_constraintBottom_toBottomOf="@id/today_diet_TV"
                     app:layout_constraintStart_toEndOf="@id/today_diet_TV"
@@ -132,6 +133,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="15sp"
+                    android:layout_marginTop="10dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/calories_LL"
@@ -166,7 +168,7 @@
                     android:layout_marginStart="15dp"
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="10dp"
-                    android:text="식단정보 추가"
+                    android:text="@string/addition_diet_item"
                     android:textSize="18sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -190,12 +192,11 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="3dp"
             android:layout_marginEnd="10dp"
-            android:text="검색"
+            android:text="@string/search"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 
 
 </FrameLayout>
