--- a/app/src/main/res/layout/fragment_diet.xml
+++ b/app/src/main/res/layout/fragment_diet.xml
@@ -83,13 +83,14 @@
 
                 <ImageButton
                     android:id="@+id/today_diet_help_IV"
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
                     android:layout_marginStart="3dp"
                     android:background="@drawable/shape_circle_stroke"
                     android:focusableInTouchMode="false"
                     android:src="@android:drawable/ic_menu_help"
                     app:layout_constraintBottom_toBottomOf="@id/today_diet_TV"
+                    app:layout_constraintDimensionRatio="1:1"
                     app:layout_constraintStart_toEndOf="@id/today_diet_TV"
                     app:layout_constraintTop_toTopOf="@id/today_diet_TV" />
 
