FEAT: Diet 통계 그래프 구현
1. MPAndroidChart의 LineChart 사용.
   유저가 차트 범위를 선택하면 viewModel에 옵션을 전달한다.
   viewModel은 enum 타입에서 얻어온 기간 정보를 이용해 data 조회.

   fragment는 변경된 data를 관찰하고 chart에 맞게 가공한다.

2. DietStats에서 시간 범위 enum 타입을 선언
  DietStats.PERIOD.WEEK, MONTH 등

  viewModel.ranges에서 선언한 기간 개수만큼 옵션이 생성된다.

3. Pre-loaded Database 수정

  2개 이상의 db 파일을 불러오면 나중에 선언한 db 파일만 불러와지는 현상 존재

--- a/app/src/main/res/layout/fragment_diet_stats.xml
+++ b/app/src/main/res/layout/fragment_diet_stats.xml
@@ -10,13 +10,31 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintGuide_percent="0.08" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.92" />
+
         <LinearLayout
             android:id="@+id/chart_period_LL"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:background="@drawable/shape_radius_square_stroke_r5dp"
+            android:backgroundTint="@color/primary_surface"
             android:orientation="horizontal"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            android:padding="5dp"
+            app:layout_constraintEnd_toEndOf="@id/guideline7"
+            app:layout_constraintStart_toStartOf="@id/guideline6"
             app:layout_constraintTop_toTopOf="parent">
 
             <TextView
@@ -24,45 +42,53 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="1주" />
+                android:background="@drawable/shape_radius_square_stroke_r5dp"
+                android:text="1주"
+                android:textAlignment="center" />
 
             <TextView
                 android:id="@+id/textView3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="1개월" />
+                android:text="1개월"
+                android:textAlignment="center" />
 
             <TextView
                 android:id="@+id/textView4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="3개월" />
+                android:text="3개월"
+                android:textAlignment="center" />
+
             <TextView
                 android:id="@+id/textView5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="1년" />
+                android:text="1년"
+                android:textAlignment="center" />
         </LinearLayout>
 
         <TextView
             android:id="@+id/chart_period_TV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="8dp"
             android:text="TextView"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toStartOf="@id/guideline6"
             app:layout_constraintTop_toBottomOf="@id/chart_period_LL" />
 
         <com.github.mikephil.charting.charts.LineChart
             android:id="@+id/today_diet_line_chart"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             android:layout_marginTop="10dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintDimensionRatio=""
+            app:layout_constraintEnd_toEndOf="@id/guideline7"
+            app:layout_constraintStart_toStartOf="@id/guideline6"
             app:layout_constraintTop_toBottomOf="@id/chart_period_TV" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
