--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,12 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="gray">#9C9C9C</color>
+    <color name="yellowgray">#DAD7CD</color>
+    <color name="lightgray">#D9D9D9</color>
 
     <color name="second_panel">#FFDAD7CD</color>
     <color name="primary">#FF344E41</color>
+    <color name="lightgreen">#A3B18A</color>
+    <color name="green">#588157</color>
 </resources>
