--- a/app/src/main/res/layout/item_food.xml
+++ b/app/src/main/res/layout/item_food.xml
@@ -1,46 +1,108 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:background="@drawable/shape_square_stroke"
+    android:paddingVertical="12dp"
     tools:layout_height="70dp">
 
-    <TextView
-        android:id="@+id/item_food_name"
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_item_food"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.13" />
+
+    <TextView
+        android:id="@+id/item_food_category"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
         android:text="-"
-        android:textSize="15sp"
+        app:layout_constraintBottom_toBottomOf="@id/item_food_details_CL"
+        app:layout_constraintEnd_toEndOf="@id/guideline_item_food"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@id/item_food_details_CL"
+        tools:text="마가린" />
 
-    <TextView
-        android:id="@+id/item_food_entpTV"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="-"
-        android:textSize="13sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/item_food_name" />
-
-    <TextView
-        android:id="@+id/item_food_weight"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:text="-"
-        app:layout_constraintStart_toEndOf="@id/item_food_name"
-        app:layout_constraintTop_toTopOf="@id/item_food_name" />
-
-    <TextView
-        android:id="@+id/item_food_calory"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="30dp"
-        android:text="-"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/item_food_details_CL"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_marginStart="4dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/item_food_name" />
+        app:layout_constraintStart_toEndOf="@id/item_food_category"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/item_food_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="-"
+            android:textSize="15sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="파운드마아가린" />
+
+        <TextView
+            android:id="@+id/item_food_entpTV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="-"
+            android:textSize="13sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/item_food_name"
+            tools:text="오뚜기라면㈜" />
+
+        <TextView
+            android:id="@+id/item_food_total_weight"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
+            android:text="-"
+            app:layout_constraintBottom_toBottomOf="@id/item_food_name"
+            app:layout_constraintStart_toEndOf="@id/item_food_name"
+            app:layout_constraintTop_toTopOf="@id/item_food_name"
+            tools:text="450g" />
+
+        <TextView
+            android:id="@+id/item_food_one_pack_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:text="@string/one_pack_weight"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="@id/item_food_entpTV"
+            app:layout_constraintEnd_toStartOf="@id/item_food_one_pack_weight"
+            app:layout_constraintTop_toTopOf="@id/item_food_entpTV"
+            tools:visibility="visible" />
+
+
+        <TextView
+            android:id="@+id/item_food_one_pack_weight"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="30dp"
+            android:text="-"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="@id/item_food_one_pack_text"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/item_food_one_pack_text"
+            tools:text="100g"
+            tools:visibility="visible" />
+
+        <TextView
+            android:id="@+id/item_food_calory"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="30dp"
+            android:text="-"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/item_food_name" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
