--- a/app/src/main/res/layout/view_diet_detail_item.xml
+++ b/app/src/main/res/layout/view_diet_detail_item.xml
@@ -19,6 +19,12 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/diet_detail_guideline"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            app:layout_constraintGuide_percent="0.3"
+            android:orientation="vertical"/>
 
         <ImageView
             android:id="@+id/diet_image_IV"
@@ -26,12 +32,12 @@
             android:layout_height="0dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
-            android:layout_marginBottom="16dp"
+            android:padding="4dp"
             android:scaleType="centerCrop"
             android:src="@{image}"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintDimensionRatio="h,1:1"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="@id/diet_detail_guideline"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/bottom_diet_unclick" />
 
@@ -51,53 +57,28 @@
                 android:id="@+id/diet_name_TV"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/breakfast"
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/diet_time_TV"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="오전 07:00" />
+                android:layout_height="wrap_content" />
 
             <com.google.android.material.chip.ChipGroup
                 android:id="@+id/chipGroup"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:chipSpacingVertical="8dp">
+                android:layout_height="match_parent">
 
                 <com.google.android.material.chip.Chip
-                    android:id="@+id/chip"
+                    android:id="@+id/chip_calory"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@drawable/shape_radius_square_stroke_r16dp"
-                    android:backgroundTint="@color/secondary"
                     android:checkable="false"
                     android:clickable="false"
                     android:focusable="false"
                     android:padding="10dp"
-                    android:text="칼로리: 0kcal"
-                    app:checkedIconEnabled="false"
-                    app:checkedIconVisible="false"
-                    app:chipBackgroundColor="@color/secondary"
-                    app:chipIconEnabled="false"
-                    app:chipIconVisible="false"
-                    app:closeIconEnabled="false"
-                    app:closeIconVisible="false"
-                    app:ensureMinTouchTargetSize="true" />
-
-                <com.google.android.material.chip.Chip
-                    android:id="@+id/chip2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/shape_radius_square_stroke_r16dp"
-                    android:backgroundTint="@color/secondary"
-                    android:checkable="false"
-                    android:clickable="false"
-                    android:focusable="false"
-                    android:padding="10dp"
-                    android:text="칼로리: 0kcal"
                     app:checkedIconEnabled="false"
                     app:checkedIconVisible="false"
                     app:chipBackgroundColor="@color/secondary"
